# mahjong-record-counter-python

./: .gitignore  pyproject.toml  start.sh  stop.sh
mahjong_record_counter/: __init__.py  fastapi_server.py  interface.py  main.py  pywebio_task_func.py  service.py
mahjong_record_counter/js_helper/: fetchCommonPlayers.js
tests/: test_mahjong_record_counter.py
