[tool.poetry]
name = "mahjong-record-counter"
version = "0.1.0"
description = ""
authors = ["Kuroi_Cc <chenchengmikuro@gmail.com>"]

[tool.poetry.scripts]
start = "mahjong_record_counter:run"

[tool.poetry.dependencies]
python = "^3.9"
pywebio = "^1.6.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
